welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:7: error: ';' expected but string literal found.
		retur "FizzBuzz"
                      ^